--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,38 @@
   height: 350px;
   width: 550px;
   margin: 20px auto;
+  position: relative;
 }
 .img{
   height: 350px;
   width: 550px;
+  position: absolute;
+}
+.right{
+  height: 350px;
+  width: 100px;
+  position: absolute;
+  top: 0px;
+  right: 2px;
+}
+.left{
+  height: 350px;
+  width: 100px;
+  position: absolute;
+  top: 0px;
+  left: 2px;
+}
+.right img{
+  position: absolute;
+  top: 40%;
+  width: 50px;
+  height: 50px;
+  left: 15px;
+}
+.left img{
+  position: absolute;
+  top: 40%;
+  width: 50px;
+  height: 50px;
+  right: 15px;
 }
