--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@
   width: 50px;
   height: 50px;
   left: 15px;
+  cursor: pointer;
+  opacity: 0;
 }
 .left img{
   position: absolute;
@@ -36,4 +38,12 @@
   width: 50px;
   height: 50px;
   right: 15px;
+  cursor: pointer;
+  opacity: 0;
+}
+.right img:hover{
+  opacity: 1;
+}
+.left img:hover{
+  opacity: 1;
 }
